! Fixed a couple of disgracious horizontal scrollbars showing up in IE and mobile. (index.css)
- Removing some CSS leftovers from years ago that didn't catch my attention. (extra.ie6.css, extra.rtl.css, index.css)

! Commenazi. Gee, haven't turned on that iPod in years... Might as well update that comment. (common.css)

--- a/core/skins/extra.rtl.css
+++ b/core/skins/extra.rtl.css
@@ -71,11 +71,6 @@ a.unreadlink
 	padding: 0 0 0 0.5em
 	float, text-align: right
 
-// The dropdown menu toggle image
-#menu_toggle
-	float: left
-	margin: 10px 0 0 7px
-
 .menu
 	float, clear: right
 
